@@ -77,12 +77,12 @@ namedb_type* namedb_create(void* zone);
  * Determine new SOA SERIAL.
  * \param[in] db namedb
  * \param[in] format <SOA><Serial> format from signer configuration
- * \param[in] serial inbound serial
+ * \param[in] inbound_serial inbound serial
  * \return ods_status status
  *
  */
 ods_status namedb_update_serial(namedb_type* db, const char* format,
-    uint32_t serial);
+    uint32_t inbound_serial);
 
 /**
  * Add empty non-terminals for domain.
